# AISD_Trainee_Module

./: README.md  Shm.srv  aisd_mass_spring.cpp  ass1_ch2.py  ass1_ch3.py  checkpoint_01  checkpoint_02  checkpoint_03  frames_2026-01-20_16.02.44.gv  frames_2026-01-20_23.22.48.gv  frames_2026-01-22_17.48.19.gv  mass_spring_checkpoint1.py  mass_spring_node.cpp  shmps.py  spring_damper.webm
Assignment 2/: CMake  Launch file  WASD controls  package.xml
Assignment 2/URDF/: Gazebo control  Inertial tags  Lidar  Robot  Robot Core
SHM_Simulation/: CMakeLists.txt  package.xml
SHM_Simulation/src/: Visualization_node.cpp  physics_node.cpp  visualization_node.cpp
install/: local_setup.sh  setup.sh
install/my_robot_description/share/ament_index/resource_index/package_run_dependencies/: my_robot_description
install/my_robot_description/share/ament_index/resource_index/parent_prefix_path/: my_robot_description
install/my_robot_description/share/my_robot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/my_robot_description/share/my_robot_description/cmake/: my_robot_descriptionConfig-version.cmake  my_robot_descriptionConfig.cmake
install/my_robot_description/share/my_robot_description/environment/: ament_prefix_path.dsv  path.dsv
install/my_robot_description/share/my_robot_description/launch/: robot_gazebo_rviz.launch.py
install/my_robot_description/share/my_robot_description/urdf/: robot.urdf.xacro
install/shm/lib/shm/: marker  phy  phy = shm.physics:mainmarker
install/shm/share/shm/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/spring_system/lib/spring_system/: spring_system
install/spring_system/share/ament_index/resource_index/parent_prefix_path/: spring_system
install/spring_system/share/spring_system/: package.bash  package.sh
log/: latest_build
mass_spring_system/: CMakeLists.txt  package.xml
mass_spring_system/src/: mass_spring.cpp
mass_spring_system/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
my_src/handshake_assign/: CMakeLists.txt  package.xml
my_src/handshake_assign/src/: ai_node.cpp  vcu_node.cpp
my_src/mass_spring_cpp/: CMakeLists.txt  package.xml
my_src/mass_spring_cpp/rviz/: shm.rviz
my_src/mass_spring_cpp/src/: damped_shm_node.cpp  simple_shm_node.cpp  visualizer_node.cpp
my_src/my_robot_description/: CMakeLists.txt  package.xml
my_src/my_robot_description/launch/: gazebo.launch.py
my_src/my_robot_description/src/: dynamic_joint_publisher.cpp
my_src/my_robot_description/urdf/: robot.urdf
shm_simulation/: CMakeLists.txt  package.xml
shm_simulation/msg/: Energy.msg
shm_simulation/src/: physics_node.cpp  visualization_node.cpp
shm_simulation/srv/: ApplyForce.srv  UpdateParameters.srv
shm_simulator/: package.xml  setup.cfg  setup.py
shm_simulator/shm_simulator/: spring_damper.py
src/: CMakeLists.txt  package.xml  spring_mass_sim.cpp
src/install/: local_setup.sh  setup.sh
src/install/spring_system/share/ament_index/resource_index/package_run_dependencies/: spring_system
src/install/spring_system/share/spring_system/: package.dsv  package.ps1  package.sh  package.zsh
src/joint_state_py/: package.xml  setup.cfg  setup.py
src/joint_state_py/joint_state_py/: joint_state_node.py
src/log/: latest_build
src/my_robot_description/: CMakeLists.txt  package.xml
src/my_robot_description/launch/: display.launch.py
src/my_robot_description/rviz/: display.rviz
src/my_robot_description/scripts/: robot_controller.py
src/my_robot_description/urdf/: robot.urdf  robot.urdf.xacro
src/shm/: package.xml  setup.cfg  setup.py
src/shm/shm/: marker_node.py  physics.py
src/spring_sim/src/: try.cpp
src/spring_system/: CMakeLists.txt
src/spring_system/src/: damp_spring_sys.cpp  parm_tune.cpp  spring_sys_visualize.cpp  spring_system.cpp
src/spring_system/srv/: ParmSet.srv
