cmake_minimum_required(VERSION 3.8)
project(spring_system)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(visualization_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(std_msgs REQUIRED)
find_package(example_interfaces REQUIRED)
find_package(rosidl_default_generators REQUIRED)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

rosidl_generate_interfaces(${PROJECT_NAME}
  "srv/ParmSet.srv"
)

add_executable(damp_spring_sys src/damp_spring_sys.cpp)
ament_target_dependencies(damp_spring_sys rclcpp visualization_msgs std_msgs 
   example_interfaces)
add_executable(spring_sys_visualize src/spring_sys_visualize.cpp)
ament_target_dependencies(spring_sys_visualize rclcpp visualization_msgs std_msgs 
   example_interfaces)
add_executable(parm_tune src/parm_tune.cpp)
ament_target_dependencies(parm_tune rclcpp visualization_msgs)

rosidl_target_interfaces(parm_tune
  ${PROJECT_NAME} "rosidl_typesupport_cpp"
)

rosidl_target_interfaces(spring_sys_visualize
  ${PROJECT_NAME} "rosidl_typesupport_cpp"
)


install(TARGETS damp_spring_sys spring_sys_visualize parm_tune DESTINATION lib/${PROJECT_NAME})


ament_export_dependencies(rosidl_default_runtime)
ament_package()

